styling_index_and_create_page

--- a/SuggestionAppUI/Pages/Details.razor
+++ b/SuggestionAppUI/Pages/Details.razor
@@ -1,5 +1,7 @@
 ﻿@page "/Details/{Id}"
+@inject AuthenticationStateProvider authProvider
 @inject ISuggestionData suggestionData
+@inject IUserData userData
 @inject NavigationManager navManager
 
 <h1>Suggestion Details</h1>
@@ -9,7 +11,7 @@
         {
             <div>
                 <div>
-                         <div>
+                         <div @onclick="VoteUp">
                              <div>@GetUpvoteTopText()</div>
                              <span class="oi oi-caret-top"></span>
                              <div>@GetUpvoteBottomText()></div>
@@ -58,10 +60,11 @@
     public string Id { get; set; }
 
     private SuggestionModel suggestion;
-
+    private UserModel loggedInUser;
     protected async override Task OnInitializedAsync()
     {
         suggestion = await suggestionData.GetSuggestion(Id);
+        loggedInUser = await authProvider.GetUserFromAuth(userData);
     }
     private void ClosePage()
     {
@@ -75,7 +78,15 @@
         }
         else
         {
-            return "Click To";
+         if (suggestion.Author.Id == loggedInUser?.Id)
+         {
+                return "Awaitng";
+         }
+            else
+            {
+                return "Click To";
+
+            }
         }
     }
     private string GetUpvoteBottomText()
@@ -87,6 +98,27 @@
         else
         {
             return "Upvote";
+        }
+    }
+
+        private async Task VoteUp()
+    {
+        if (loggedInUser is not null)
+        {
+            if (suggestion.Author.Id == loggedInUser.Id)
+            {
+                // Can't vote on your own suggestion
+                return;
+            }
+            if (suggestion.UserVotes.Add(loggedInUser.Id) == false)
+            {
+                suggestion.UserVotes.Remove(loggedInUser.Id);
+            }
+            await suggestionData.UpvoteSuggestion(suggestion.Id, loggedInUser.Id);
+        }
+        else
+        {
+            navManager.NavigateTo("/MicrosoftIdentity/Account/SignIn", true);
         }
     }
 }
