--- a/SuggestionAppUI/Pages/Index.razor
+++ b/SuggestionAppUI/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-
+@inject AuthenticationStateProvider authProvider
 @inject ICategoryData categoryData
 @inject IStatusData statusData
 @inject ISuggestionData suggestionData
@@ -7,79 +7,86 @@
 @inject NavigationManager navManager
 @inject ProtectedSessionStorage sessionStorage
 
-<h1>Suggestion App</h1>
-<div>
-    <button>Suggestion</button>
+<h1 class="page-heading text-uppercase mb-4">Suggestion App</h1>
+<div class="suggestion-container">
+    <button @onclick="LoadCreatePage" class="suggest-btn btn btn-outline-light btn-lg text-uppercase">Suggestion</button>
 </div>
 
-<div>
-    <div>@suggestions?.Count Suggestions</div>
-    
-
-    <div>
-        <button @onclick="(() => OrderByNew(true))">New</button>
-        <button @onclick="(() => OrderByNew(false))">Popular</button>
+<div class="row">
+    <div class="suggestions-count col-md-4 text-light mt-2">@suggestions?.Count Suggestions</div>
+    <div class="col-md-4 col-xl-5 btn-group">
+        <button class="btn btn-order @SortedByNewClass(true)" @onclick="(() => OrderByNew(true))">New</button>
+        <button class="btn btn-order @SortedByNewClass(false)" @onclick="(() => OrderByNew(false))">Popular</button>
     </div>
-    <div>
-        <input type="text" placeholder="Search" aria-label="Search box" @oninput="((txt) => OnSearchInput((string)txt.Value))" />
+    <div class="col-md-4 col-xl-3 search-box">
+        <input type="text" placeholder="Search"
+            aria-label="Search box" class="form-control rounded-control"
+            @oninput="((txt) => OnSearchInput((string)txt.Value))" />
     </div>
 </div>
 
-<div>
-    <div>
+<div class="row">
+    <div class="col-md-8 col-xl-9">
         @if(suggestions is not null)
         {
             <Virtualize Items="@suggestions" Context="s" OverscanCount="10">
-                <div>   
-                    <div>
-                        <div>@GetUpvoteTopText(s)</div>
-                        <span class ="oi oi-caret-top"></span>
-                        <div>@GetUpvoteBottomText(s)</div>
+                <div class="suggestion-entry">   
+                    <div class="@GetVoteClass(s)" @onclick="(() => VoteUp(s))">
+                        <div class="text-uppercase">@GetUpvoteTopText(s)</div>
+                        <span class ="oi oi-caret-top" style="font-size:3rem;"></span>
+                        <div class="text-uppercase">@GetUpvoteBottomText(s)</div>
                     </div>
-                    <div>
-                        <div @onclick="(() => OpenDetails(s))">
+                    <div class="suggestion-entry-text">
+                        <div class="suggestion-entry-text-title" @onclick="(() => OpenDetails(s))">
                             @s.Suggestion
                         </div>
                         <div>
-                            <div @onclick="(() => OpenDetails(s))">
+                            <div class="suggestion-entry-text-category" @onclick="(() => OpenDetails(s))">
                                 @s.Category?.CategoryName
                             </div>
                         </div>
-                         <div>
-                           @s.SuggestionStatus?.StatusName
-                         </div>
                     </div>
+                        <div class="suggestion-entry-status @GetSuggestionStatusClass(s)">
+                             <div class="suggestion-entry-status-text">
+                               @s.SuggestionStatus?.StatusName
+                             </div>
+                        </div>
                 </div>
             </Virtualize>
 
         }
     </div>
-
+  
+  <div class="col-md-4 col-xl-3">
     @if (categories is not null)
     {
-        <div>
-            <span>Category</span>
-            <div @onclick="(() => OnCategoryClick())">All</div>
+        <div class="categories">
+            <span class="text-uppercase fw-bold">Category</span>
+            <div class="@GetSelectedCategory()" @onclick="(() => OnCategoryClick())">All</div>
             @foreach (var c in categories)
             {
-                <div @onclick="(() => OnCategoryClick(c.CategoryName))">@c.CategoryName</div>
+                <div class="@GetSelectedCategory(c.CategoryName)" @onclick="(() => OnCategoryClick(c.CategoryName))">@c.CategoryName</div>
             }
         </div>
     }
-    @if (statuses is not null)
-    {
-        <div>
-          <span>Status</span>
-          <div @onclick="(() => OnStatusClick())">All</div>
-          @foreach (var s in statuses)
-          {
-            <div @onclick="(() => OnStatusClick(s.StatusName))">@s.StatusName</div>
-          }
-        </div>
-    }
+    
+
+        @if (statuses is not null)
+        {
+            <div class="statuses">
+              <span class="text-uppercase fw-bold">Status</span>
+              <div class="@GetSelectedStatus()" @onclick="(() => OnStatusClick())">All</div>
+              @foreach (var s in statuses)
+              {
+                <div class="@GetSelectedStatus(s.StatusName)" @onclick="(() => OnStatusClick(s.StatusName))">@s.StatusName</div>
+              }
+            </div>
+        }
+  </div>
 </div>
 
 @code{
+    private UserModel loggedInUser;
     private List<SuggestionModel> suggestions;
     private List<CategoryModel> categories;
     private List<StatusModel> statuses;
@@ -93,6 +100,78 @@
     {
         categories = await categoryData.GetAllCategories();
         statuses = await statusData.GetAllStatuses();
+        await LoadAndVerifyUser();
+
+    }
+
+    private void LoadCreatePage()
+    {
+        if (loggedInUser is not null)
+        {
+            navManager.NavigateTo("/Create");
+        }
+        else
+        {
+            navManager.NavigateTo("MicrosoftIdentity/Account/SignIn", true);
+        }
+    }
+    private async Task LoadAndVerifyUser()
+    {
+        loggedInUser = await authProvider.GetUserFromAuth(userData);
+
+        var authState = await authProvider.GetAuthenticationStateAsync();
+        string objectId = authState.User.Claims.FirstOrDefault(c => c.Type.Contains("objectidentifier"))?.Value;
+
+        if (string.IsNullOrWhiteSpace(objectId) == false)
+        {
+            loggedInUser = await userData.GetUserFromAuthentication(objectId) ?? new();
+
+            string firstName = authState.User.Claims.FirstOrDefault(c => c.Type.Contains("givenname"))?.Value;
+            string lastName = authState.User.Claims.FirstOrDefault(c => c.Type.Contains("surname"))?.Value;
+            string displayName = authState.User.Claims.FirstOrDefault(c => c.Type.Equals("name"))?.Value;
+            string email = authState.User.Claims.FirstOrDefault(c => c.Type.Contains("email"))?.Value;
+
+            bool isDirty = false;
+
+            if (objectId.Equals(loggedInUser.ObjectIdentifier) == false)
+            {
+                isDirty = true;
+                loggedInUser.ObjectIdentifier = objectId;
+            }
+            if (firstName.Equals(loggedInUser.FirstName) == false)
+            {
+                isDirty = true;
+                loggedInUser.FirstName = firstName;
+            }
+            if (lastName.Equals(loggedInUser.LastName) == false)
+            {
+                isDirty = true;
+                loggedInUser.LastName = lastName;
+            }
+            if (displayName.Equals(loggedInUser.DisplayName) == false)
+            {
+                isDirty = true;
+                loggedInUser.DisplayName = displayName;
+            }
+            if (email.Equals(loggedInUser.EmailAddress) == false)
+            {
+                isDirty = true;
+                loggedInUser.EmailAddress = email;
+            }
+
+            if (isDirty )
+            {
+                if (string.IsNullOrWhiteSpace(loggedInUser.Id))
+                {
+                    await userData.CreateUser(loggedInUser);
+                }
+                else
+                {
+                    await userData.UpdateUser(loggedInUser);
+                }
+
+            }
+        }
     }
     protected async override Task OnAfterRenderAsync( bool firstRender)
     {
@@ -183,6 +262,35 @@
         await FilterSuggestions();
     }
 
+    private async Task VoteUp(SuggestionModel suggestion)
+    {
+        if (loggedInUser is not null)
+        {
+            if (suggestion.Author.Id == loggedInUser.Id)
+            {
+                // Can't vote on your own suggestion
+                return;
+            }
+            if (suggestion.UserVotes.Add(loggedInUser.Id) == false)
+            {
+                suggestion.UserVotes.Remove(loggedInUser.Id);
+            }
+            await suggestionData.UpvoteSuggestion(suggestion.Id, loggedInUser.Id);
+
+            if (isSortedByNew == false)
+            {
+                suggestions = suggestions.OrderByDescending(s => s.UserVotes.Count)
+                              .ThenByDescending(s => s.DateCreated).ToList();
+
+
+
+            }
+        }
+        else
+        {
+            navManager.NavigateTo("/MicrosoftIdentity/Account/SignIn", true);
+        }
+    }
     private string GetUpvoteTopText(SuggestionModel suggestion)
     {
         if (suggestion.UserVotes?.Count >0)
@@ -191,7 +299,15 @@
         }
         else
         {
-            return "Click To";
+            if (suggestion.Author.Id == loggedInUser?.Id)
+            {
+                return "Awaitng";
+            }
+            else
+            {
+                return "Click To";
+
+            }
         }
     }
     private string GetUpvoteBottomText(SuggestionModel suggestion)
@@ -209,5 +325,71 @@
     private void OpenDetails(SuggestionModel suggestion)
     {
         navManager.NavigateTo($"/Details/{suggestion.Id}");
+    }
+
+    private string SortedByNewClass( bool isNew)
+    {
+        if (isNew == isSortedByNew)
+        {
+            return "sort-selected";
+        }
+        else
+        {
+            return "";
+        }
+    }
+    private string GetVoteClass(SuggestionModel suggestion)
+    {
+        if (suggestion.UserVotes is null || suggestion.UserVotes.Count == 0)
+        {
+            return "suggestion-entry-no-votes";
+        }
+        else if (suggestion.UserVotes.Contains(loggedInUser?.Id))
+        {
+            return "suggestion-entry-voted";
+        }
+        else
+        {
+            return "suggestion-entry-not-voted";
+        }
+    }
+
+    private string GetSuggestionStatusClass(SuggestionModel suggestion)
+    {
+        if (suggestion is null || suggestion.SuggestionStatus is null)
+        {
+            return "suggestion-entry-status-none";
+        }
+        string ouput = suggestion.SuggestionStatus.StatusName switch
+        {
+            "Completed" => "suggestion-entry-status-completed",
+            "Watching" => "suggestion-entry-status-watching",
+            "Upcoming" => "suggestion-entry-status-upcoming",
+            "Dismissed" => "suggestion-entry-status-dismissed",
+            _ => "suggestion-entry-status-none",
+        };
+        return ouput;
+    }
+    private string GetSelectedCategory( string category ="All")
+    {
+        if (category == selectedCategory)
+        {
+            return "selected-category";
+        }
+        else
+        {
+            return "";
+        }
+    }
+    private string GetSelectedStatus( string status ="All")
+    {
+        if (status == selectedStatus)
+        {
+            return "selected-status";
+        }
+        else
+        {
+            return "";
+        }
     }
 }
