--- a/SuggestionAppUI/App.razor
+++ b/SuggestionAppUI/App.razor
@@ -5,7 +5,7 @@
             <NotAuthorized>
                 <NotAuthorized />
             </NotAuthorized>
-        </AuthorizeRouteView>/>
+        </AuthorizeRouteView>
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
     <NotFound>
