--- a/SuggestionAppUI/Pages/Create.razor
+++ b/SuggestionAppUI/Pages/Create.razor
@@ -1,5 +1,7 @@
 ﻿@page "/Create"
+@attribute [Authorize]
 @using SuggestionAppUI.Models
+@inject AuthenticationStateProvider authProvider
 @using  SuggestionAppUI.Components
 @inject ICategoryData categoryData
 @inject ISuggestionData suggestionData
@@ -7,53 +9,52 @@
 @inject NavigationManager navManager
 
 
-<h1>Make A Suggestion</h1>
+<h1 class="page-heading text-uppercase mb-4">Make A Suggestion</h1>
 
-<div>
-    <div>
-        <div>
-            <button @onclick ="ClosePage"></button>
+<div class="row justify-content-center create-form">
+    <div class="col-xl-8 col-lg-10 form-layout">
+        <div class="close-button-section">
+            <button class="btn btn-close" @onclick ="ClosePage"></button>
         </div>
+
         @if(categories is not null)
-        {
-            
-        }
+        {   
         <EditForm Model="suggestion" OnValidSubmit="CreateSuggestion">
             <DataAnnotationsValidator />
             <ValidationSummary />
-            <div>
-                <label for="suggestion-text">Suggestion</label>
-                <div>Focus on the topic or techology you want to learn about.</div>
-                <InputText id="suggestion-text" @bind-Value="suggestion.Suggestion"/>
+            <div class="input-section">
+                <label class="form-label fw-bold text-uppercase" for="suggestion-text">Suggestion</label>
+                <div class="input-description">Focus on the topic or techology you want to learn about.</div>
+                <InputText class="form-control" id="suggestion-text" @bind-Value="suggestion.Suggestion"/>
             </div>
-            <div>
-                <label for="category-text">Category</label>
-                <div>Choose one category.</div>
-                <div>
+            <div class="input-section">
+                <label class="form-label fw-bold text-uppercase" for="category-text">Category</label>
+                <div class="input-description">Choose one category.</div>
+                <div class="col-lg-8">
                     <MyInputRadioGroup id="category" @bind-Value="suggestion.CategoryId">
                         @foreach (var c in categories)
                         {
-                            <div>
+                            <div class="radio-item-group">
                                 <InputRadio Value="@c.Id" id="@c.Id" />
-                                <label for="@c.Id">@c.CategoryName - @c.CategoryDescription</label>
+                                <label class="form-label fw-bold text-uppercase" for="@c.Id">@c.CategoryName - @c.CategoryDescription</label>
                             </div>
                             
                         }
                     </MyInputRadioGroup>
                 </div>
             </div>
-            <div>
-                <label for="description-text">Description</label>
-                <div>Briefly describe your suggestion.</div>
-                <InputTextArea id="description-text" @bind-Value="suggestion.Description"/>
+            <div class="input-section">
+                <label class="form-label fw-bold text-uppercase" for="description-text">Description</label>
+                <div class="input-description">Briefly describe your suggestion.</div>
+                <InputTextArea class="form-control" id="description-text" @bind-Value="suggestion.Description"/>
             </div>
 
-            <div>
-                <button type="submit">Suggest</button>
+            <div class="center-children">
+                <button class="btn btn-main btn-lg text-uppercase" type="submit">Suggest</button>
             </div>
 
         </EditForm>
-
+        }
     </div>
 </div>
 
@@ -65,8 +66,8 @@
     protected async override Task OnInitializedAsync()
     {
         categories = await categoryData.GetAllCategories();
-        //TODO - Replace with user lookup
-        loggedInUser = await userData.GetUserFromAuthentication("abc-123");
+
+        loggedInUser = await authProvider.GetUserFromAuth(userData);
     }
 
     private void ClosePage()
