--- a/SuggestionAppUI/Pages/Profile.razor
+++ b/SuggestionAppUI/Pages/Profile.razor
@@ -1,4 +1,6 @@
 ﻿@page "/Profile"
+@attribute [Authorize]
+@inject AuthenticationStateProvider authProvider
 @inject ISuggestionData suggestionData
 @inject IUserData userData
 @inject NavigationManager navManager
@@ -185,8 +187,8 @@
     protected async override Task OnInitializedAsync()
     {
 
-        //TODO - Replace with user lookup
-        loggedInUser = await userData.GetUserFromAuthentication("abc-123");
+
+        loggedInUser = await authProvider.GetUserFromAuth(userData);
 
         var results = await suggestionData.GetUsersSuggestions(loggedInUser.Id);
         if (loggedInUser is not null && results is not null)
