--- a/SuggestionAppUI/wwwroot/css/site.css
+++ b/SuggestionAppUI/wwwroot/css/site.css
@@ -1,15 +1,35 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;0,900;1,700;1,900&display=swap');
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
 }
-
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    color: #FFFFFF;
+}
+body{
+    background: url(../images/SuggestionPageBackground.jpg) no-repeat center center fixed;
+    background-size: cover;
+    height:100%;
+}
+h1 {
+    padding-top: 1rem;
+}
 h1:focus {
     outline: none;
 }
 
 a, .btn-link {
-    color: #0071c1;
+    color: #FFF;
+    text-decoration: none;
+}
+a:hover, .btn-link:hover {
+    color: #FFF;
+    text-decoration: underline;
 }
 
 .btn-primary {
@@ -23,7 +43,7 @@ a, .btn-link {
 }
 
 .valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
+    /* outline: 1px solid #26b050; */
 }
 
 .invalid {
@@ -62,3 +82,264 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+
+.page-heading {
+    text-align: center;
+}
+.suggestion-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3rem;
+}
+.suggest-btn {
+    font-family: 'Montserrat', sans-serif;
+    border-width: 3px;
+    border-radius: 10px;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    font-weight: 900;
+}
+.btn-outline-light::after hover {
+    color: #39BAD8;
+    background-color: #FFFFFF;
+    border-color: #FFF;
+}
+.suggestions-count {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 1rem;
+}
+.btn-order {
+    background-color: #FFF;
+    border: 0px solid #DDD;
+    border-radius: 10px;
+}
+.btn:focus,
+.form-control:focus {
+    box-shadow: none;
+}
+.sort-selected {
+    background-color: #DDD;
+    color: #000;
+    font-weight: 700;
+}
+    .sort-selected::after hover {
+        color: #000;
+    }
+
+.search-box {
+    --bs-gutter-x: 3.5rem;
+}
+.rounded-control {
+    border-radius: 10px;
+}
+.categories {
+    margin: 1rem;
+    background-color: #FFF;
+    border-radius: 10px;
+    padding: 1rem;
+}
+.categories div {
+    margin-top: 1rem;
+}
+.categories div:hover {
+    cursor: pointer;
+}
+
+.selected-category {
+    font-weight: 700;
+}
+
+.statuses {
+    margin: 1rem;
+    background-color: #FFF;
+    border-radius: 10px;
+    padding: 1rem;
+}
+
+.statuses div {
+    margin-top: 1rem;
+}
+
+  .statuses div:hover {
+    cursor: pointer;
+  }
+
+.selected-status {
+    font-weight: 700;
+}
+.suggestion-entry {
+    display: grid;
+    grid-template-columns: 142px 1fr 45px;
+    border-radius: 20px;
+    margin: 20px 0;
+    box-shadow: rgba(0, 0, 0, 0.35) 0 5px  15px;
+}
+.suggestion-entry-no-votes,
+.suggestion-entry-voted,
+.suggestion-entry-not-voted {
+    text-align: center;
+    border-right: 3px #39BAD8 solid;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    background-color: #39BAD8;
+    color: #FFF;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    font-family:'Monserrat', sans-serif;
+    font-weight: 700;
+    font-size: 0.8rem;
+    min-height: 142px;
+    cursor: pointer;
+}
+.suggestion-entry-no-votes{
+    background-color: #DDD;
+    color: #FFF;
+    border-color: #DDD;
+}
+.suggestion-entry-voted {
+    background-color: #39BAD8;
+    color: #FFF;
+}
+.suggestion-entry-not-voted {
+    background-color: #FFF;
+    color: #39BAD8;
+}
+.suggestion-entry-text {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    padding-left: 20px;
+    background-color: #FFF;
+}
+.suggestion-entry-text-title {
+    flex-grow: 1;
+    padding-top: 10px;
+}
+.suggestion-entry-text-category {
+    text-transform: uppercase;
+    color: darkgrey;
+    font-family: 'Monserrat', sans-serif;
+    font-weight: 700;
+    font-size: 0.8rem;
+    flex:1;
+    display: flex;
+    align-items: flex-end;
+}
+.suggestion-entry-status {
+    border-bottom-right-radius: 15px;
+    border-top-right-radius: 15px;
+    display: flex;
+    padding-top: 1rem;
+    padding-left: 0.2rem;
+    padding-bottom: 1rem;
+    padding-right: 1rem;
+}
+.suggestion-entry-status-completed {
+    background-color: #B5D43A;
+    border: 1px #B5D43A solid;
+}
+.suggestion-entry-status-watching {
+    background-color: #E9354C;
+    border: 1px #E9354C solid;
+}
+.suggestion-entry-status-upcoming {
+    background-color: #835581;
+    border: 1px #835581 solid;
+}
+.suggestion-entry-status-dismissed {
+    background-color: #F9C30B;
+    border: 1px #F9C30B solid;
+}
+.suggestion-entry-status-none {
+    background-color: #FFF;
+    border: 1px #FFF solid;
+}
+.suggestion-entry-status-text {
+    text-transform: uppercase;
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    color: #FFF;
+    padding: 5px;
+    text-align: center;
+    line-height: 1.75;
+    font-weight: bold;
+    font-size:0.8rem;
+    letter-spacing:1.2px;
+}
+.nav-links {
+    display: flex;
+    text-align: center;
+    justify-content: flex-end;
+}
+.login-link {
+    padding-left: 1rem;
+
+}
+/*Create page*/
+.form-layout {
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    padding: 2rem;
+}
+    .form-layout a {
+        font-weight:700;
+        color: #39BAD8;
+    }
+    .form-layout a:hover {
+        font-weight: 700;
+        color: #39BAD8;
+        text-decoration: underline;
+    }
+.close-button-section {
+    display: flex;
+    justify-content: flex-end;
+}
+.input-section {
+    margin-bottom: 2rem;
+}
+.input-description {
+    margin-bottom:0.5rem;
+}
+.radio-item-group input[type="radio"] {
+    display:none;
+}
+.radio-item-group label {
+    border-color: #39BAD8;
+    border-width:1px;
+    padding: 0.3rem 1.5rem;
+    border-radius: 10px;
+    width:100%;
+    border-style: solid;
+}
+.radio-item-group input[type="radio"]:checked + label {
+    background-color: #39BAD8;
+    color: #FFFFFF;
+    width: 100%;
+    border: 1px #39BAD8 solid;
+}
+.radio-item-group {
+    margin: 0.5rem;
+}
+.center-children {
+    display: flex;
+    justify-content:center;
+}
+.btn-main {
+    color: #FFF;
+    background-color: #39BAD8;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight:900;
+    border-radius: 10px;
+    border-width: 3px;
+}
+.btn-main:hover {
+    color: #39BAD8;
+    border-color: #39BAD8;
+    background-color: #FFF;
+    border-width: 3px;
+}
