--- a/SuggestionAppUI/Pages/SampleData.razor
+++ b/SuggestionAppUI/Pages/SampleData.razor
@@ -5,27 +5,34 @@
 @inject ISuggestionData suggestionData
 
 <h3>SampleData</h3>
-@if (categoriesCreated)
+@if(test)
 {
-    <h4>Categories have been created</h4>
+    <h3>Testing page, no longer active.</h3>
 }
 else
 {
-    <button class="btn btn-primary" @onclick ="CreateCategories">Create Categories</button>
-}
+    @if (categoriesCreated)
+    {
+        <h4>Categories have been created</h4>
+    }
+    else
+    {
+        <button class="btn btn-primary" @onclick ="CreateCategories">Create Categories</button>
+    }
 
-@if (statusesCreated)
-{
-    <h4>Statuses have been created</h4>
-}
-else
-{
-    <button class="btn btn-primary" @onclick="CreateStatuses">Create Statuses</button>
-}
+    @if (statusesCreated)
+    {
+        <h4>Statuses have been created</h4>
+    }
+    else
+    {
+        <button class="btn btn-primary" @onclick="CreateStatuses">Create Statuses</button>
+    }
 
-<button class= "btn btn-danger" @onclick ="GenerateSampleData">Generate Sample Data</button>
-
+    <button class= "btn btn-danger" @onclick ="GenerateSampleData">Generate Sample Data</button>
+}
 @code {
+    private bool test = true; //testing purposes
     private bool categoriesCreated = false;
     private bool statusesCreated = false;
 
